<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="517dp"
        android:layout_height="277dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/hero_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterWord"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/search_word"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textColorHint="#514F4F"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSubmit"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_search"
        android:contentDescription="@string/btnSearch"
        android:onClick="sendRequestOnClick"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/enterWord"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <TextView
        android:id="@+id/showDef"
        android:layout_width="300dp"
        android:layout_height="234dp"
        android:layout_marginTop="80dp"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:text="@string/log_out"
        android:textColor="#FFFEFE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_logout"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDef"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/more"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:text="@string/more"
        android:textColor="#FFFEFE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_more"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logout"
        app:layout_constraintTop_toBottomOf="@+id/showDef"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>